--- a/src/userCSS.css
+++ b/src/userCSS.css
@@ -1,7 +1,7 @@
 :root {
   
   /* Main Settings  */
-  --main-background-color: rgb(235, 235, 235);
+  --main-background-color: rgb(0, 0, 0);
 
   --text-primary-color: rgb(0, 0, 0);
   --text-secondary-color: rgb(68, 68, 68);
@@ -10,7 +10,7 @@
   --nav-link-color: rgb(0, 0, 0);
   --nav-link-hover-color: rgb(87, 87, 87);
   --nav-link-hover-background-color: none;
-  --nav-background-color: none;
+  --nav-background-color: rgb(255, 255, 255);;
   --nav-height: 150px;
   --nav-logo-width: 125px;
   --nav-logo-font-size: 16px;
@@ -24,9 +24,9 @@
   --mobile-nav-link-size: 20px;
 
   /* Card Settings  */
-  --card-background-color: rgb(216, 216, 216);
+  --card-background-color: rgb(30, 168, 67;
   --card-border-radius: 10px;
-  --card-shadow: 10px 10px 20px -13px rgb(121, 121, 121);
+  --card-shadow: 10px 10px 20px -13px rgb(114, 242, 148);
 
   /* Minting Area */
   --minting-box-color: #151A1F;
@@ -36,7 +36,7 @@
 
 
   /* Minting Button */
-  --minting-button-color: linear-gradient(180deg,#604ae5 0%,#813eee 100%);
+  --minting-button-color: linear-gradient(180deg,#ba1414 0%,#000000 100%);
   --minting-button-text-color: white;
 
 }
