--- a/src/userCSS.css
+++ b/src/userCSS.css
@@ -10,7 +10,7 @@
   --nav-link-color: rgb(0, 0, 0);
   --nav-link-hover-color: rgb(87, 87, 87);
   --nav-link-hover-background-color: none;
-  --nav-background-color: rgb(255, 255, 255);;
+  --nav-background-color: rgb(255, 255, 255);
   --nav-height: 150px;
   --nav-logo-width: 125px;
   --nav-logo-font-size: 16px;
@@ -24,7 +24,7 @@
   --mobile-nav-link-size: 20px;
 
   /* Card Settings  */
-  --card-background-color: rgb(30, 168, 67;
+  --card-background-color: rgb(30, 168, 67);
   --card-border-radius: 10px;
   --card-shadow: 10px 10px 20px -13px rgb(114, 242, 148);
 
