--- a/src/userCSS.css
+++ b/src/userCSS.css
@@ -4,23 +4,23 @@
   --main-background-color: rgb(0, 0, 0);
 
   --text-primary-color: rgb(0, 0, 0);
-  --text-secondary-color: rgb(68, 68, 68);
+  --text-secondary-color: rgb(0, 0, 0);
 
   /* Nav Settings  */
-  --nav-link-color: rgb(0, 0, 0);
-  --nav-link-hover-color: rgb(87, 87, 87);
+  --nav-link-color: rgb(255, 255, 255);
+  --nav-link-hover-color: rgb(255, 255, 255);
   --nav-link-hover-background-color: none;
-  --nav-background-color: rgb(255, 255, 255);
+  --nav-background-color: none;
   --nav-height: 150px;
   --nav-logo-width: 125px;
   --nav-logo-font-size: 16px;
 
   /* Mobile Nav Settings  */
 
-  --mobile-nav-background-color: rgb(155, 155, 155);
+  --mobile-nav-background-color: rgb(0, 0, 0);
   --mobile-nav-logo-height:100px;
-  --mobile-nav-link-color: rgb(65, 65, 65);
-  --mobile-nav-link-hover-color: rgb(29, 29, 29);
+  --mobile-nav-link-color: rgb(255, 255, 255);
+  --mobile-nav-link-hover-color: rgb(255, 255, 255);
   --mobile-nav-link-size: 20px;
 
   /* Card Settings  */
@@ -36,7 +36,7 @@
 
 
   /* Minting Button */
-  --minting-button-color: linear-gradient(180deg,#ba1414 0%,#000000 100%);
+  --minting-button-color: linear-gradient(180deg,#72f294 0%,#000000 100%);
   --minting-button-text-color: white;
 
 }
