--- a/src/userCSS.css
+++ b/src/userCSS.css
@@ -1,14 +1,14 @@
 :root {
   
   /* Main Settings  */
-  --main-background-color: rgb(0, 0, 0);
+  --main-background-color: rgb(204, 18, 192);
 
-  --text-primary-color: rgb(255, 255, 255);
-  --text-secondary-color: rgb(255, 255, 255);
+  --text-primary-color: rgb(0, 0, 0);
+  --text-secondary-color: rgb(0, 0, 0);
 
   /* Nav Settings  */
-  --nav-link-color: rgb(255, 255, 255);
-  --nav-link-hover-color: rgb(255, 255, 255);
+  --nav-link-color: rgb(0, 0, 0);
+  --nav-link-hover-color: rgb(0, 0, 0);
   --nav-link-hover-background-color: none;
   --nav-background-color: none;
   --nav-height: 150px;
@@ -17,10 +17,10 @@
 
   /* Mobile Nav Settings  */
 
-  --mobile-nav-background-color: rgb(0, 0, 0);
+  --mobile-nav-background-color: rgb(204, 18, 192);
   --mobile-nav-logo-height:100px;
-  --mobile-nav-link-color: rgb(255, 255, 255);
-  --mobile-nav-link-hover-color: rgb(255, 255, 255);
+  --mobile-nav-link-color: rgb(0, 0, 0);
+  --mobile-nav-link-hover-color: rgb(0, 0, 0;
   --mobile-nav-link-size: 20px;
 
   /* Card Settings  */
@@ -29,15 +29,15 @@
   --card-shadow: 10px 10px 20px -13px rgb(134, 242, 148);
 
   /* Minting Area */
-  --minting-box-color: #151A1F;
-  --minting-box-heading-color: white;
+  --minting-box-color: #cc12c0;
+  --minting-box-heading-color: black;
   --minting-box-info-box-color: rgb(65, 65, 65);
-  --minting-box-text-color: white;
+  --minting-box-text-color: black;
 
 
   /* Minting Button */
   --minting-button-color: linear-gradient(180deg,#72f294 0%,#000000 100%);
-  --minting-button-text-color: white;
+  --minting-button-text-color: Black;
 
 }
 
