--- a/src/userCSS.css
+++ b/src/userCSS.css
@@ -20,7 +20,7 @@
   --mobile-nav-background-color: rgb(204, 18, 192);
   --mobile-nav-logo-height:100px;
   --mobile-nav-link-color: rgb(0, 0, 0);
-  --mobile-nav-link-hover-color: rgb(0, 0, 0;
+  --mobile-nav-link-hover-color: rgb(0, 0, 0);
   --mobile-nav-link-size: 20px;
 
   /* Card Settings  */
